--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <div class="container">
         <nav>
           <ul class="nav navbar-nav navbar-left">
-            <li><%= link_to "Home",   '#' %></li>
+            <li><%= link_to "Home",   root_path %></li>
             <li><%= link_to "Log in", '#' %></li>
             <li><%= link_to "Students", '#' %></li>
             <li><%= link_to "Study Groups", '#' %></li>
