we finished setting up new, create, index, and show

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,1 +1,8 @@
-<%= @student %>
+<div class="container-fluid">
+  <h1>Student # <%= @student.id %></h1>
+  <hr>
+  <label>First Name: </label>
+  <label><%= @student.first_name %></label>
+  <label>Last Name: </label>
+  <label><%= @student.last_name %></label>
+</div>
