setup table and search menu on students, search isn't functional yet, modified show template as well

--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -33,4 +33,14 @@ textarea {
 
 .container-fluid {
   background-color: white;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.table th {
+  text-align: center;
+}
+
+.table tr:hover {
+   background-color: #C8C8C8;
 }
