--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
           <ul class="nav navbar-nav navbar-left">
             <li><%= link_to "Home",   root_path %></li>
             <li><%= link_to "Log in", '#' %></li>
-            <li><%= link_to "Students", '#' %></li>
+            <li><%= link_to "Students", { controller: "students", action: "index" } %></li>
             <li><%= link_to "Study Groups", '#' %></li>
             <li><%= link_to "Study Sessions", '#' %></li>
           </ul>
