--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,6 +1,31 @@
-<p>Index page</p>
+<div class="container-fluid">
+<h2>Students</h2>
+<div class="header">
+<%= form_tag('/students', :method => "get", class: "navbar-form", id: "search-form") do %>
+    <div class="input-append">
+      <%= text_field_tag :search, params[:data], class: "span2", placeholder: "Search Students" %>
+      <%= select_tag(:filter, options_for_select(['First Name', 'Last Name']))%>
+      <button class="btn" type="submit">Search</button>
+    </div>
+  <% end %>
+</div>
+<table class="table">
+  <thead>
+    <th>First Name</th>
+    <th>Last Name</th>
+    <th>Institution</th>
+    <th></th>
+  </thead>
+  <tbody>
+    <% @students.each do |student| %>
+      <tr>
+        <td><%= student.first_name %></td>
+        <td><%= student.last_name %></td>
+        <td><%= student.institution %></td>
+        <td><%= link_to 'View', student %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
-<% @students.each do |student| %>
-  <label><%= student.first_name %></label>
-  <hr>
-<% end %>
+</div>
