--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,8 +1,14 @@
 <div class="container-fluid">
   <h1>Student # <%= @student.id %></h1>
   <hr>
-  <label>First Name: </label>
-  <label><%= @student.first_name %></label>
-  <label>Last Name: </label>
-  <label><%= @student.last_name %></label>
+  <p>First Name: 
+  <%= @student.first_name %>
+  <p>Last Name:
+  <%= @student.last_name %></p>
+  <p>Institution:
+  <%= @student.institution %></p>
+  <p>School Of Study:
+  <%= @student.school_of_study %></p>
+  <p>Discipline:
+  <%= @student.discipline %></p>
 </div>
