--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -6,7 +6,7 @@
     study sessions to improve your academic success!
   </h2>
   <div class="home-buttons">
-    <%= link_to "Log In", "#", class: "btn btn-lg btn-primary" %>
+    <%= link_to "Log In", login_path, class: "btn btn-lg btn-primary" %>
     <%= link_to "Create Account", { controller: "students", action: "new" }, class: "btn btn-lg btn-primary" %>
   </div>
 </div>
