--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -17,6 +17,7 @@
   <div class="home-buttons">
     <% if current_student.present? && current_student.id ==  @student.id %>
       <%= link_to 'Edit', {controller: 'students', action: 'edit'}, :class => "btn btn-lg btn-primary", :style => 'float: left;' %>
+      <%= link_to 'Delete', @student, method: :delete, :class => "btn btn-lg btn-primary", :style => 'float: left;' %>
     <% else %>
     <%= link_to 'Invite to Group', "#", :class => "btn btn-lg btn-primary", :style => 'float: left;' %>
     <% end %>
