--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,15 +1,15 @@
 <div class="container-fluid">
 <h2>Students</h2>
 <div class="header">
-<%= form_tag('/students', :method => "get", class: "navbar-form", id: "search-form") do %>
+<%= form_tag( 'students/search', :method => :get, class: "navbar-form", id: "search-form") do %>
     <div class="input-append">
       <%= text_field_tag :search, params[:data], class: "span2", placeholder: "Search Students" %>
       <%= select_tag(:filter, options_for_select(['First Name', 'Last Name']))%>
-      <button class="btn" type="submit">Search</button>
+      <%= submit_tag("Search") %>
     </div>
   <% end %>
   <div class="home-buttons">
-    <%= link_to 'New', {controller: 'students', action: 'new'}, :class => "btn btn-lg btn-primary", :style => 'float: left;' %>
+    <%= link_to 'New', { controller: 'students', action: 'new' }, :class => "btn btn-lg btn-primary", :style => 'float: left;' %>
   </div>
 </div>
 <table class="table">
