--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -4,7 +4,7 @@
 <%= form_tag( 'students/search', :method => :get, class: "navbar-form", id: "search-form") do %>
     <div class="input-append">
       <%= text_field_tag :search, params[:data], class: "span2", placeholder: "Search Students" %>
-      <%= select_tag(:filter, options_for_select(['First Name', 'Last Name']))%>
+      <%= select_tag(:filter, options_for_select(['First Name', 'Last Name', 'Institution']))%>
       <%= submit_tag("Search") %>
     </div>
   <% end %>
