group display test

--- a/app/views/study_groups/edit.html.erb
+++ b/app/views/study_groups/edit.html.erb
@@ -1,1 +1,28 @@
 <p> Implement edit group page</p>
+<div class="container-fluid">
+  <h1>Edit Profile</h1>
+  <hr>
+  <%= render 'shared/student_error_messages' %>
+  <%= form_for @study_group do |f| %>
+    <!-- <%= f.label 'Username:' %>
+    <%= f.text_field :username %>
+    <br>
+    <%= f.label 'Password:' %>
+    <%= f.text_field :password_digest %>
+    <br> -->
+    <%= f.label 'Topic:' %>
+    <%= f.text_field :topic %>
+    <br>
+    <%= f.label 'Institution:' %>
+    <%= f.text_field :Institution %>
+    <br>
+    <%= f.label 'Student Limit:' %>
+    <%= f.text_field :institution %>
+    <br>
+    <div class="home-buttons">
+      <%= f.submit :class => "btn btn-lg btn-primary" %>
+      <%= link_to 'Cancel', {controller: 'students', action: 'index'}, :class => "btn btn-lg btn-primary" %>
+      <%= link_to 'Delete', {controller: 'students', action: 'destroy'}, :class => "btn btn-lg btn-primary" %>
+    </div>
+  <% end %>
+</div>
