study_group fix

--- a/app/views/study_groups/show.html.erb
+++ b/app/views/study_groups/show.html.erb
@@ -1,6 +1,6 @@
 <p>Implement group show page</p>
 <div class="container-fluid">
-  <h1><%= @study_group.first_name %> <%= @study_group.last_name %></h1>
+  <h1><%= @study_group.title %> <%= @study_group.topic%></h1>
   <hr>
   <div class="container-left">
     <p>Topic:
