study group limit

--- a/app/views/study_groups/show.html.erb
+++ b/app/views/study_groups/show.html.erb
@@ -6,7 +6,8 @@
     <p>Topic:
     <%= @study_group.topic %></p>
 
-    <p>title:
+    <p>Title:
     <%= @study_group.title %></p>
+    <p>Student Limit:
+    <%= @study_group.student_limit %></p>
   </div>
-  
