--- a/app/views/study_groups/show.html.erb
+++ b/app/views/study_groups/show.html.erb
@@ -1,13 +1,8 @@
-<p>Implement group show page</p>
 <div class="container-fluid">
-  <h1><%= @study_group.title %> <%= @study_group.topic%></h1>
+  <h1><%= @study_group.title %></h1>
   <hr>
   <div class="container-left">
-    <p>Topic:
-    <%= @study_group.topic %></p>
-
-    <p>Title:
-    <%= @study_group.title %></p>
-    <p>Student Limit:
-    <%= @study_group.student_limit %></p>
+    <p>Topic: <%= @study_group.topic %></p>
+    <p>Institution: <%= @study_group.institution %> </p>
+    <p>Student Limit: <%= @study_group.student_limit %></p>
   </div>
