--- a/app/views/study_groups/index.html.erb
+++ b/app/views/study_groups/index.html.erb
@@ -1,6 +1,5 @@
-<p> Implement Group Index page</p>
 <div class="container-fluid">
-<h2>Students</h2>
+<h2>Study Groups</h2>
 <div class="header">
 <%= form_tag( 'study_groups/search', :method => :get, class: "navbar-form", id: "search-form") do %>
     <div class="input-append">
@@ -17,7 +16,7 @@
   <thead>
     <th>Title</th>
     <th>Topic</th>
-    <!-- <th>Student Limit</th> -->
+    <th>Institution</th>
     <th></th>
   </thead>
   <tbody>
@@ -25,8 +24,7 @@
       <tr>
         <td><%= study_group.title %></td>
         <td><%= study_group.topic %></td>
-        <td><%= study_group.student_limit %></td>
-        <!-- <td><%= student.institution %></td> -->
+        <td><%= study_group.institution %></td>
         <td><%= link_to 'View', study_group %></td>
       </tr>
     <% end %>
