--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -6,8 +6,11 @@
     <%= f.label 'Username:' %>
     <%= f.text_field :username %>
     <br>
-    <%= f.label 'Password:' %>
-    <%= f.text_field :password_digest %>
+    <%= f.label :password, 'Password:' %>
+    <%= f.text_field :password %>
+    <br>
+    <%= f.label :password_confirmation, "Confirmation" %>
+    <%= f.password_field :password_confirmation %>
     <br>
     <%= f.label 'First Name:' %>
     <%= f.text_field :first_name %>
