setup assigning admin student to created group, added migration that needs to be reviewed

--- a/app/views/study_groups/show.html.erb
+++ b/app/views/study_groups/show.html.erb
@@ -6,3 +6,4 @@
     <p>Institution: <%= @study_group.institution %> </p>
     <p>Student Limit: <%= @study_group.student_limit %></p>
   </div>
+</div>
