fixed study session model and setup some erb templates

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
             <li><%= link_to "Log Out", logout_path, method: :delete %></li>
             <li><%= link_to "Students", { controller: "students", action: "index" } %></li>
             <li><%= link_to "Study Groups", { controller: "study_groups", action: "index" } %></li>
-            <li><%= link_to "Study Sessions", '#' %></li>
+            <li><%= link_to "Study Sessions", { controller: "study_sessions", action: "index" } %></li>
             <%  else %>
             <li><%= link_to "Log in", login_path %></li>
             <%  end %>
