fixed showing study session, fixed more stuff on study groups

--- a/app/views/study_groups/show.html.erb
+++ b/app/views/study_groups/show.html.erb
@@ -10,14 +10,17 @@
   </div>
   <div class="home-buttons">
     <% if @study_group.student_in_group? current_student %>
-      <!-- <%= link_to 'Leave Group', join_study_group_path(:student_id => current_student.id), :class => "btn btn-lg btn-primary" %> -->
+      <%= link_to 'Leave Group', join_study_group_path(:student_id => current_student.id), :class => "btn btn-lg btn-primary" %>
     <% else %>
       <%= link_to 'Join Group', join_study_group_path(:student_id => current_student.id), :class => "btn btn-lg btn-primary" %>
     <% end %>
     <% if @study_group.admin_student.id == current_student.id %>
       <%= link_to 'Edit', edit_study_group_path, :class => "btn btn-lg btn-primary" %>
     <% end %>
+    <%= link_to 'View Groups', study_groups_path, :class => "btn btn-lg btn-primary" %>
   </div>
+  <br>
+  <h2>Students In <%= @study_group.title %></h2>
   <table class="table">
     <thead>
       <th>First Name</th>
