--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -19,7 +19,7 @@
       <%= link_to 'Edit', {controller: 'students', action: 'edit'}, :class => "btn btn-lg btn-primary", :style => 'float: left;' %>
       <%= link_to 'Delete', @student, method: :delete, :class => "btn btn-lg btn-primary", :style => 'float: left;' %>
     <% else %>
-    <%= link_to 'Invite to Group', "#", :class => "btn btn-lg btn-primary", :style => 'float: left;' %>
+    <!-- <%= link_to 'Invite to Group', "#", :class => "btn btn-lg btn-primary", :style => 'float: left;' %> -->
     <% end %>
     <%= link_to 'View Students', {controller: 'students', action: 'index'}, :class => "btn btn-lg btn-primary", :style => 'float: right;' %>
   </div>
