--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -7,7 +7,7 @@
     <%= f.text_field :username %>
     <br>
     <%= f.label :password, 'Password:' %>
-    <%= f.text_field :password %>
+    <%= f.password_field :password %>
     <br>
     <%= f.label :password_confirmation, "Confirmation" %>
     <%= f.password_field :password_confirmation %>
