--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -84,3 +84,10 @@ textarea {
   width: auto;
   margin-left: 0;
 }
+
+img  {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-height: 100px;
+}
